--- a/webClothing/index/assets/css/description.css
+++ b/webClothing/index/assets/css/description.css
@@ -1,57 +1,60 @@
-.container{
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0px;
+.containerItem{
   display: flex;
-  margin-top: 70px;
-  margin-bottom: 30px;
-  
+  margin: 60px 10px 20px;
+  justify-content: space-between;
+  padding: 10px;
 }
 .left-column{
-    width: 500px;
-    overflow: hidden;
-    float: left;
-    width: 40%;
-  }
-  .myimage{
-    margin-top: 50px;
-  }
-  .right-column{
-    float: left;
-    width: 60%;
-    padding-left: 250px;
-  }
-  .img-zoom-zoomLens {
-    position: absolute;
-    border: 1px solid #d4d4d4;
-    width: 120px;
-    height: 120px;
-    border: rgb(241, 234, 234) 1px solid;
-    background-color: white;
-    opacity: 0.4;
-    z-index: 999;
+  width: 48%;
+}
+.proImgDescription{
+  position: relative;
+  width: 400px;
+  height: 400px;
+  overflow: hidden;
+}
+.myimage{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+
+}
+.img-zoom-zoomLens {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  width: 100px;
+  height: 100px;
+  border: rgb(241, 234, 234) 1px solid;
+  background-color: white;
+  opacity: 0.4;
+  z-index: 999;
  }
  .img-zoom-result {
   border: 1px solid #d4d4d4;
 }
 .myresult{
-position: absolute;
-top: 100px;
-left: 550px;
-z-index:1;
+  position: absolute;
+  top: 100px;
+  left: 550px;
+  z-index:1;
 }
 
-.right-column div{
-  margin-top: 35px;
+.right-column{
+  width: 48%;
+}
+.soluong, .mausac,.kichthuoc, .product-name-price, .themvaogio{
+  margin-top: 10px;
 }
 .soluong input, .mausac select, .kichthuoc select{
   width: 250px;
   height: 35px;
   text-align: center;
   font-size: 1.1rem;
-  font-family:inherit;
    border: #aaa3a3 1px solid;
-   margin-top: 30px;
+   margin-top: 10px;
  
 }
 .soluong, .mausac,.kichthuoc label{
@@ -84,12 +87,13 @@ z-index:1;
   transform:translateY(-1px);
 }
 .product-info-1{
-  margin-left: 41px;
+  padding: 10px;
+  
 }
 .product-info-1 ul{
   display: flex;
-  margin: 0;
-
+  width: 100%;
+  border-bottom: 1px solid #333;
  }
 .product-info-1 li{
   list-style: none;
@@ -97,9 +101,10 @@ z-index:1;
   padding: 10px 10px;
   display: block;
   font-weight: 600;
+  cursor: pointer;
 }
 .product-info-1 li:hover{
-  border: #d4d4d4 1px solid;
+  border: #dbd4d4 1px solid;
 }
 .tab-panel:not(:first-child){
   display: none;
@@ -113,8 +118,71 @@ z-index:1;
   border-bottom: white 1px solid;
 }
 .tab{
-margin-top: 0px;
-border-top: #333 1px solid;
-margin-left: 41px;
-padding-top: 40px;
+  margin-top: 0px;
+  margin-left: 41px;
+  padding-top: 40px;
+}
+@media (max-width:1024px) {
+  body{
+    font-size: 14px;
+  }
+  .containerItem{
+    flex-direction: column;
+  }
+  .left-column, .right-column{
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .right-column{
+    margin-top: 30px;
+  }
+  .proImgDescription{
+    width: 600px;
+    height: 600px;
+  }
+  .soluong, .mausac,.kichthuoc, .product-name-price, .themvaogio{
+    width: 600px;
+  }
+  .product-name-price{
+    border-bottom: solid 1px #cac8c8;
+  }
+  .proInfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .tab-panel:not(:first-child) img{
+    width: 700px;
+    height: 500px;
+  }
+}
+@media (max-width:1023px) and (min-width:740px){
+  .proImgDescription{
+    width: 500px;
+    height: 500px;
+  }
+  .soluong, .mausac,.kichthuoc, .product-name-price, .themvaogio{
+    width: 500px;
+  }
+  .tab-panel:not(:first-child) img{
+    width: 500px;
+    height: 300px;
+  }
+}
+@media (max-width:739px){
+  .proImgDescription{
+    width: 300px;
+    height: 300px;
+  }
+  .soluong, .mausac,.kichthuoc, .product-name-price, .themvaogio{
+    width: 300px;
+  }
+  .tab-panel:not(:first-child) img{
+    width: 300px;
+    height: 250px;
+  }
 }
